2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Libsoup uses threads to invoke HTTP request handlers. Therefore some
	locking has to be used to protect central data structures of the
	publisher. Let's hope that:

	  1) I protected all critical data structures
	  2) really balanced all lock/unlock calls
	  3) produced no dead locks

	Did I mention that I hate threads?

	* libepc/publisher.c: Add epc_publisher_lock and use it.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Demonstrate epc_publisher_add_bookmark in simple-publisher example.

	* examples/simple-publisher.c: Use epc_publisher_add_bookmark.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Reuse epc_publisher_list function for HTTP request handlers.

	* libepc/publisher.c: Remove epc_publisher_list_resource_item_xml and
	-epc_publisher_list_resource_item_html. Remove and buffer field of
	EpcListContext. Use epc_publisher_list in epc_publisher_handle_root
	and epc_publisher_handle_list_path.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Use lower directory hierarchy for storing certificates.

	* libepc/tls.c: Modify epc_tls_get_filename.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Use a time based UUID as serial for self-signed certificates.
	Bug #500251.

	* configure.ac: Check for uuid >= 1.36.
	* libepc/tls.c: Pass UUID to gnutls_x509_crt_set_serial.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Support dynamic ZeroConf bookmarks.

	* libepc/publisher.c, libepc/publisher.h:
	Add epc_publisher_add_bookmark and epc_publisher_get_path.
	Rename epc_publisher_get_url to epc_publisher_get_uri.
	* libepc/consumer.c: Use epc_publisher_get_path.
	* Makefile.am, tests/.gitignore: Add test-publisher-change-name.
	* tests/test-publisher-change-name.c: Test epc_publisher_add_bookmark.
	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>
