@@ -25,6 +25,7 @@
 #include "shell.h"
 #include "tls.h"
 
+#include <glibconfig.h>
 #include <glib/gi18n-lib.h>
 
 #include <libsoup/soup-address.h>
@@ -208,7 +209,8 @@ struct _EpcPublisherPrivate
   gchar                 *private_key_file;
 };
 
-G_LOCK_DEFINE (epc_publisher_lock);
+static GStaticRecMutex epc_publisher_lock;
+
 G_DEFINE_TYPE (EpcPublisher, epc_publisher, G_TYPE_OBJECT);
 
 static EpcResource*
@@ -362,7 +364,7 @@ epc_publisher_handle_get_path (SoupServerContext *context,
       return;
     }
 
-  G_LOCK (epc_publisher_lock);
+  g_static_rec_mutex_lock (&epc_publisher_lock);
   key = epc_publisher_get_key (context->path);
 
   if (key)
@@ -398,7 +400,7 @@ epc_publisher_handle_get_path (SoupServerContext *context,
       g_signal_connect_swapped (message, "finished", G_CALLBACK (epc_contents_unref), contents);
     }
 
-  G_UNLOCK (epc_publisher_lock);
+  g_static_rec_mutex_unlock (&epc_publisher_lock);
 }
 
 static void
@@ -412,7 +414,7 @@ epc_publisher_handle_list_path (SoupServerContext *context,
 
   GString *contents = g_string_new (NULL);
 
-  G_LOCK (epc_publisher_lock);
+  g_static_rec_mutex_lock (&epc_publisher_lock);
 
   if (g_str_has_prefix (context->path, "/list/") && '\0' != context->path[6])
     files = epc_publisher_list (self, context->path + 6);
@@ -445,7 +447,7 @@ epc_publisher_handle_list_path (SoupServerContext *context,
   g_string_free (contents, FALSE);
   g_list_free (files);
 
-  G_UNLOCK (epc_publisher_lock);
+  g_static_rec_mutex_unlock (&epc_publisher_lock);
 }
 
 static void
@@ -463,7 +465,7 @@ epc_publisher_handle_root (SoupServerContext *context,
       GList *files;
       GList *iter;
 
-      G_LOCK (epc_publisher_lock);
+      g_static_rec_mutex_lock (&epc_publisher_lock);
 
       files = epc_publisher_list (self, NULL);
       files = g_list_sort (files, (GCompareFunc) g_utf8_collate);
@@ -506,7 +508,7 @@ epc_publisher_handle_root (SoupServerContext *context,
       g_string_free (contents, FALSE);
       g_list_free (files);
 
-      G_UNLOCK (epc_publisher_lock);
+      g_static_rec_mutex_unlock (&epc_publisher_lock);
     }
   else
     soup_message_set_status (message, SOUP_STATUS_NOT_FOUND);
@@ -526,7 +528,7 @@ epc_publisher_server_auth_cb (SoupServerAuthContext *auth_ctx G_GNUC_UNUSED,
 
   uri = soup_message_get_uri (message);
 
-  G_LOCK (epc_publisher_lock);
+  g_static_rec_mutex_lock (&epc_publisher_lock);
 
   context.auth = auth;
   context.publisher = EPC_PUBLISHER (data);
@@ -560,7 +562,7 @@ epc_publisher_server_auth_cb (SoupServerAuthContext *auth_ctx G_GNUC_UNUSED,
     g_debug ("%s: path=%s, resource=%p, auth_handler=%p, authorized=%d", G_STRLOC,
              uri->path, resource, resource ? resource->auth_handler : NULL, authorized);
 
-  G_UNLOCK (epc_publisher_lock);
+  g_static_rec_mutex_unlock (&epc_publisher_lock);
 
   return authorized;
 }
@@ -1085,6 +1087,7 @@ epc_publisher_class_init (EpcPublisherClass *cls)
                                                         G_PARAM_STATIC_BLURB));
 
   g_type_class_add_private (cls, sizeof (EpcPublisherPrivate));
+  g_static_rec_mutex_init (&epc_publisher_lock);
 }
 
 /**
@@ -1214,12 +1217,12 @@ epc_publisher_add_handler (EpcPublisher      *self,
   g_return_if_fail (NULL != handler);
   g_return_if_fail (NULL != key);
 
-  G_LOCK (epc_publisher_lock);
+  g_static_rec_mutex_lock (&epc_publisher_lock);
 
   resource = epc_resource_new (handler, user_data, destroy_data);
   g_hash_table_insert (self->priv->resources, g_strdup (key), resource);
 
-  G_UNLOCK (epc_publisher_lock);
+  g_static_rec_mutex_unlock (&epc_publisher_lock);
 }
 
 /**
@@ -1311,7 +1314,7 @@ epc_publisher_remove (EpcPublisher *self,
   g_return_val_if_fail (EPC_IS_PUBLISHER (self), FALSE);
   g_return_val_if_fail (NULL != key, FALSE);
 
-  G_LOCK (epc_publisher_lock);
+  g_static_rec_mutex_lock (&epc_publisher_lock);
 
   if (self->priv->default_bookmark &&
       g_str_equal (key, self->priv->default_bookmark))
@@ -1325,7 +1328,7 @@ epc_publisher_remove (EpcPublisher *self,
 
   success = g_hash_table_remove (self->priv->resources, key);
 
-  G_UNLOCK (epc_publisher_lock);
+  g_static_rec_mutex_unlock (&epc_publisher_lock);
 
   return success;
 }
@@ -1380,13 +1383,13 @@ epc_publisher_list (EpcPublisher *self,
   if (pattern && *pattern)
     context.pattern = g_pattern_spec_new (pattern);
 
-  G_LOCK (epc_publisher_lock);
+  g_static_rec_mutex_lock (&epc_publisher_lock);
 
   g_hash_table_foreach (self->priv->resources,
                         epc_publisher_list_cb,
                         &context);
 
-  G_UNLOCK (epc_publisher_lock);
+  g_static_rec_mutex_unlock (&epc_publisher_lock);
 
   if (context.pattern)
     g_pattern_spec_free (context.pattern);
@@ -1431,7 +1434,7 @@ epc_publisher_set_auth_handler (EpcPublisher   *self,
   g_return_if_fail (EPC_IS_PUBLISHER (self));
   g_return_if_fail (NULL != handler);
 
-  G_LOCK (epc_publisher_lock);
+  g_static_rec_mutex_lock (&epc_publisher_lock);
 
   resource = epc_publisher_find_resource (self, key);
 
@@ -1440,7 +1443,7 @@ epc_publisher_set_auth_handler (EpcPublisher   *self,
   else
     g_warning ("%s: No resource handler found for key `%s'", G_STRFUNC, key);
 
-  G_UNLOCK (epc_publisher_lock);
+  g_static_rec_mutex_unlock (&epc_publisher_lock);
 }
 
 /**
@@ -1477,7 +1480,7 @@ epc_publisher_add_bookmark (EpcPublisher *self,
 
   g_return_if_fail (EPC_IS_PUBLISHER (self));
 
-  G_LOCK (epc_publisher_lock);
+  g_static_rec_mutex_lock (&epc_publisher_lock);
 
   resource = epc_publisher_find_resource (self, key);
 
@@ -1494,7 +1497,7 @@ epc_publisher_add_bookmark (EpcPublisher *self,
   else
     g_warning ("%s: No resource handler found for key `%s'", G_STRFUNC, key);
 
-  G_UNLOCK (epc_publisher_lock);
+  g_static_rec_mutex_unlock (&epc_publisher_lock);
 }
 
 /**
